# telegram-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: client.rs  config.rs  main.rs  output.rs
src/commands/: chats.rs  contacts.rs  dialog_list.rs  history.rs  mod.rs  search.rs  send.rs  user.rs  user_info.rs
src/commands/send/: album.rs  media.rs  mod.rs
